[tool.poetry]
name = "comprex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.19.1"
nptyping = "^1.3.0"
sounddevice = "^0.4.0"
pino = {git = "https://github.com/7cm-diameter/pino", branch = "main"}
amas = {git = "https://github.com/7cm-diameter/amas", branch = "main"}
scipy = "^1.6.2"
opencv-python = "^4.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-language-server = {extras = ["all"], version = "^0.36.2"}
isort = "^5.7.0"
pyflakes = "^2.2.0"
pycodestyle = "^2.6.0"
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
